<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#008577"
    android:orientation="vertical"
    tools:context=".Register"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="343dp"
            android:layout_height="426dp"
            android:layout_below="@+id/login_title"
            android:layout_alignParentStart="true"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"

            android:layout_marginTop="60dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/corners"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextusername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
                            android:inputType="textPersonName"
                            android:textColor="#1976D2"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="#1976D2"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#1976D2" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/conform_password"
                            android:inputType="textPassword"
                            android:textColor="#1976D2" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp">

                            <RelativeLayout
                                android:id="@+id/checkbox_layoyt3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <Button
                                android:id="@+id/btn_register"
                                style="@style/DefaultButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="25dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_fill2"
                                android:text="@string/register"
                                android:textSize="24sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/textViewLogin2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:onClick="ClickBackToLogin2"
                            android:text="@string/back_to_login"
                            android:textColor="#0A0A0A" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </ScrollView>

        </RelativeLayout>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:elevation="4dp"
            android:src="@drawable/logo"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#0F7463"

            app:civ_shadow_radius="10" />
        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/new_user_registration"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBaruser"
        style="?android:attr/progressBarStyle"
        android:layout_width="76dp"
        android:layout_height="63dp"
        android:layout_below="@+id/loginLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="24dp" />


</RelativeLayout>
