<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="92dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="#BAD6D7DA">

    <TextView
        android:id="@+id/Vacci_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewNamechild"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Vacci_name" />

    <TextView
        android:id="@+id/vacc_month"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_marginTop="2dp"
        android:text="later"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Vacci_name"
        app:layout_constraintTop_toBottomOf="@+id/Vacci_name"
        tools:text="vacc_date" />

    <TextView
        android:id="@+id/textViewNamechild"
        android:layout_width="165dp"
        android:layout_height="25dp"
        android:layout_marginTop="7dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewDatechild"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/vaccination_name" />

    <TextView
        android:id="@+id/textViewDatechild"
        android:layout_width="165dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:textSize="18sp"
        android:text="@string/vaccination_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNamechild" />

    <TextView
        android:id="@+id/textViewStatuschild"
        android:layout_width="165dp"
        android:layout_height="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewDatechild"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatechild" />

    <TextView
        android:id="@+id/vacc_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vacc_month"
        app:layout_constraintTop_toBottomOf="@+id/vacc_month"
        tools:text="vacc_status" />
</androidx.constraintlayout.widget.ConstraintLayout>
    <!--<LinearLayout-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:orientation="horizontal"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:paddingTop="10dp"-->
    <!--    android:paddingBottom="10dp"-->
    <!--    >-->

    <!--    -->
    <!--    -->
    <!--    -->
    <!--    -->
    <!--    <TextView-->
    <!--        android:id="@+id/Vacci_date"-->
    <!--        android:layout_width="108dp"-->
    <!--        android:layout_height="37dp"-->
    <!--        android:layout_weight="1" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/vacc_status"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_weight="1"-->
    <!--        />-->
    <!--</LinearLayout>-->